unpackaged/main/default/objects/AS_Tax__Account_Tax__c/AS_Tax__Account_Tax__c.object-meta.xml
<CustomObject>
    <label>Account Tax</label>
    <nameField>
        <displayFormat>AccountTax-{00}</displayFormat>
        <label>Account Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>