unpackaged/main/default/objects/AS_Tax__Account_Tax__c/fields/AS_Tax__Account__c.field-meta.xml
<CustomField>
    <fullName>AS_Tax__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Taxes</relationshipLabel>
    <relationshipName>Account_Taxes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>