unpackaged/main/default/objects/AS_Tax__Account_Tax__c/fields/AS_Tax__Rate__c.field-meta.xml
<CustomField>
    <fullName>AS_Tax__Rate__c</fullName>
    <formula>AS_Tax__Tax_Rate__r.AcctSeed__Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>