unpackaged/main/default/objects/AS_Tax__Account_Tax__c/fields/AS_Tax__Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>AS_Tax__Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>