unpackaged/main/default/objects/AS_Tax__Account_Tax__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>AS_Tax__Account__c</columns>
    <columns>AS_Tax__Rate__c</columns>
    <columns>AS_Tax__Tax_Rate__c</columns>
    <columns>AS_Tax__Tax_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>