unpackaged/main/default/objects/AS_Tax__Account_Tax__c/listViews/AS_Tax__All.listView-meta.xml
<ListView>
    <fullName>AS_Tax__All</fullName>
    <columns>NAME</columns>
    <columns>AS_Tax__Tax_Rate__c</columns>
    <columns>AS_Tax__Tax_Type__c</columns>
    <columns>AS_Tax__Rate__c</columns>
    <columns>AS_Tax__Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>